--- a/css/styles.css
+++ b/css/styles.css
@@ -411,11 +411,23 @@ html {
 }
 
 .paragraph {
+    position: relative;
     border: 1px solid #00F0FF;
     box-shadow: 0 0 8px rgba(0, 240, 255, 0.3);
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
+}
+
+.delete {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 10px;
+    height: 10px;
+    background: url("../images/cross.svg") no-repeat;
+    background-size: contain;
+    cursor: pointer;
 }
 
 .button__wrapper {
