--- a/css/styles.css
+++ b/css/styles.css
@@ -423,9 +423,20 @@ html {
     position: absolute;
     top: 10px;
     right: 10px;
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     background: url("../images/cross.svg") no-repeat;
+    background-size: contain;
+    cursor: pointer;
+}
+
+.edit {
+    position: absolute;
+    top: 10px;
+    right: 40px;
+    width: 20px;
+    height: 20px;
+    background: url("../images/pencil.svg") no-repeat;
     background-size: contain;
     cursor: pointer;
 }
