--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -23,7 +21,6 @@ html {
  */
 
 body {
-    font-family: 'Orbitron', sans-serif;
     margin: 0;
 }
 
@@ -370,8 +367,7 @@ html {
 }
 
 .main {
-    background: url(../images/bg.jpg) no-repeat;
-    background-size: cover;
+    background: #121317;
     min-height: 100vh;
 }
 
@@ -387,21 +383,18 @@ html {
 
 .textarea {
     width: 100%;
-    background-color: #010039;
-    color: #00F0FF;
-    border: 2px solid #00F0FF;
-    box-shadow: 0 0 8px rgba(0, 240, 255, 0.3);
-    caret-color: #FF00F5;
-    padding: 10px;
+    color: #fff;
+    background: #1c1d22;
+    border: 1px solid #1a79ff;
+    border-radius: 20px;
+    padding: 10px 20px;
     font-size: 18px;
     margin-bottom: 20px;
     resize: none;
-    border-radius: 10px;
 }
 
 .textarea::placeholder {
-    color: #ffffff;
-    opacity: 0.6;
+    color: #5a5b5d;
 }
 
 .result {
@@ -412,16 +405,16 @@ html {
 
 .paragraph {
     position: relative;
-    border: 1px solid #00F0FF;
-    box-shadow: 0 0 8px rgba(0, 240, 255, 0.3);
-    padding: 10px;
+    border: 1px solid #4b4b4b;
+    padding: 20px;
     margin-bottom: 10px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .delete {
     position: absolute;
-    top: 10px;
+    top: 50%;
+    transform: translate(-50%, -50%);
     right: 10px;
     width: 20px;
     height: 20px;
@@ -432,8 +425,9 @@ html {
 
 .edit {
     position: absolute;
-    top: 10px;
     right: 40px;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 20px;
     height: 20px;
     background: url("../images/pencil.svg") no-repeat;
@@ -448,20 +442,24 @@ html {
 .button {
     display: inline-block;
     position: relative;
-    background: transparent;
-    color: #0ff;
-    border: 2px solid #0ff;
-    padding: 15px 40px;
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
+    background: #1a79ff;
+    font-weight: 500;
+    font-size: 16px;
+    color: #fff;
     letter-spacing: 2px;
     cursor: pointer;
     overflow: hidden;
-    transition: all 0.3s;
-    box-shadow:
-            0 0 10px rgba(0, 255, 255, 0.5),
-            0 0 20px rgba(0, 255, 255, 0.3),
-            inset 0 0 10px rgba(0, 255, 255, 0.3);
-    border-radius: 10px;
+    border-radius: 9999px;
+    border: none;
+    padding: 11px 33px 11px 33px;
+}
+
+.button:hover {
+    background: #1373fa;
+}
+
+@media (max-width: 768px) {
+    .info {
+        flex-direction: column;
+    }
 }
